# qu_security_backend

./: .env.example  .env.local  .env.local_to_prod  .env.prod  .env.production  .gitignore  .pre-commit-config.yaml  JWT_DEMO.html  README.md  deploy.sh  manage.py  manage_aws.sh  pyproject.toml  requirements.txt  setup_local.sh  zappa_settings.json
.github/workflows/: ci.yml
.windsurf/rules/: running-commands.md
common/: admin.py  api.py  constants.py  mixins.py  pagination.py  serializers.py  test_utils.py  urls.py  utils.py
common/migrations/: 0001_initial.py  0002_alter_generalsettings_managers.py  0003_generalsettings_api_page_size.py
common/models/: __init__.py  base_model.py  general_settings.py
core/: admin.py  api.py  models.py  serializers.py  storages.py  tests.py  urls.py  views.py
core/admin/: __init__.py  property.py  service.py
core/api/: __init__.py  auth.py  clients.py  expenses.py  guards.py  properties.py  property_types.py  services.py  shifts.py  tariffs.py  users.py  weapons.py
core/management/commands/: create_sample_data.py
core/migrations/: 0001_initial.py  0002_alter_client_options_alter_expense_options_and_more.py  0003_client_created_at_client_is_active_client_updated_at_and_more.py  0004_propertytypeofservice_property_contract_start_date_and_more.py  0005_guard_address_guard_ssn_guardpropertytariff.py  0006_shift_status.py  0007_property_alias.py  0008_alter_client_managers_alter_expense_managers_and_more.py  0009_remove_guardpropertytariff_unique_guard_property_tariff_and_more.py  0010_populate_test_data.py  0010_remove_property_monthly_rate_and_more.py  0011_weapon.py  0012_guard_is_armed_shift_is_armed.py  0013_property_description.py  0014_remove_property_contract_start_date_and_more.py
core/migrations/deprecated/: 0011_populate_test_data.py
core/models/: __init__.py  client.py  expense.py  guard.py  guard_property_tariff.py  property.py  property_type_of_service.py  service.py  shift.py  weapon.py
core/serializers/: __init__.py  clients.py  expenses.py  guards.py  properties.py  property_types.py  services.py  shifts.py  tariffs.py  users.py  weapons.py
core/tests/: conftest.py  test_clients_api.py  test_filtering_api.py  test_guards_api.py  test_guards_properties_shifts_api.py  test_properties_api.py  test_search_api.py  test_services_api.py  test_shifts_api.py  test_shifts_api_permissions.py  test_tariffs_api.py  test_weapons_api.py
docs/: api-ordering.md  shifts-api-es.md
locale/es/LC_MESSAGES/: django.mo  django.po
permissions/: api.py  jwt_utils.py  models.py  permissions.py  tests.py  urls.py  utils.py  views.py
permissions/management/commands/: setup_permissions.py
permissions/migrations/: 0001_initial.py  0002_permissionlog_created_at_permissionlog_is_active_and_more.py  0003_alter_permissionlog_managers_and_more.py  0004_alter_resourcepermission_resource_type.py
qu_security/: asgi.py  env_config.py  settings.py  urls.py  wsgi.py
scripts/: format.sh  setup-dev.sh
